Начата третья часть правок

--- a/index.html
+++ b/index.html
@@ -1827,7 +1827,7 @@
                 <a href="javascript:void(0)" class="close close_thenk"><i></i></a>
                 <div class="thenk_block__adres">
                     <p>г.Ростов-на-Дону, пр. Шолохова, д.101</p>
-                    <a href="javascript:void(0)" id="schem_thenks"><i></i>Показать на карте</a>
+                    <a href="javascript:void(0)" id="schem_thenks" title="Маршрут в магазин кондиционеров"><i></i>Показать на карте</a>
                 </div>
                 <div class="thenk_block_logo">
                     <a href="index.html">
@@ -1841,7 +1841,7 @@
                         в ближайшее время</p>
                 </div>
                 <div class="thenk_block_footer">
-                    <a href="javascript:void(0)">Контакты ООО “Вимтех”</a>
+                    <a href="javascript:void(0)" title="Юридическая информация ООО ВИМТЕХ">Контакты ООО “Вимтех”</a>
                     <p>Телефон претензий и контроля качества <span>+7 (904) 348 59 21</span></p>
                 </div>
             </div>
@@ -1987,10 +1987,10 @@
                             прошедшем месяце - лидеры
                             <span>продаж:</span>
                         </h3>
-                        <a href="javascript:void(0)">MitsubishiElectric SRK20HG-S / SRC20HG-S</a>
-                        <a href="javascript:void(0)">MitsubishiElectric SRK20HG-S - SRC20HG-S
+                        <a href="javascript:void(0)" title="Одна из 3-х, самых популярных в Ростове сплит систем">MitsubishiElectric SRK20HG-S / SRC20HG-S</a>
+                        <a href="javascript:void(0)" title="Одна из 3-х, самых популярных в Ростове сплит систем">MitsubishiElectric SRK20HG-S - SRC20HG-S
                             SRC20HG-S</a>
-                        <a href="javascript:void(0)">Сплит система MitsubishiElectric SRK20HG-
+                        <a href="javascript:void(0)" title="Одна из 3-х, самых популярных в Ростове сплит систем">Сплит система MitsubishiElectric SRK20HG-
                             S - SRC20HG-S SRC20HG-S</a>
                     </div>
                 </div>
@@ -3250,7 +3250,7 @@
                         <li><a href="#img2"
                                title="Сплит с новейшими функциями (Wi-FI, датчик присутствия, с ионизатором, суперфильтрами) ">с
                             "наворотами"</a></li>
-                        <li><a href="#img3" title="Техника с самой выгодной в Ростове ценой">лушая цена в Ростове</a>
+                        <li><a href="#img3" title="Техника с самой выгодной в Ростове ценой">лучшая цена в Ростове</a>
                         </li>
                         <li><a href="#img4" title="Сплит с цветными внутренними блоками (чёрные, красные, золотые)">дизайнерские</a>
                         </li>
@@ -3486,7 +3486,7 @@
             <!--модальное окно выбор конец -->
             <div class="header_nav">
 
-                <a href="javascript:void(0)" class="header_nav_sandwich">
+                <a href="javascript:void(0)" class="header_nav_sandwich" title="удобная навигация по сайту">
                     <i>
                         <span></span>
                         <span></span>
@@ -3496,24 +3496,24 @@
                 </a>
                 <nav>
                     <ul>
-                        <li><a href="javascript:void(0)">Доставка</a></li>
-                        <li><a href="javascript:void(0)">Оплата </a></li>
-                        <li><a href="javascript:void(0)">Контакты</a></li>
+                        <li><a href="javascript:void(0)" title="Порядок доставки и сроки">Доставка</a></li>
+                        <li><a href="javascript:void(0)" title="Формы оплаты, в т.ч. Яндекс Касса">Оплата </a></li>
+                        <li><a href="javascript:void(0)" title="Карточка предприятия ООО ВИМТЕХ">Контакты</a></li>
                     </ul>
                 </nav>
                 <div class="header_nav_logo_line">
 
                     <div class="header_nav_logo_line_logo">
-                        <a href="index.html" class="logo_mini"><img src="img/micro_logo.png" alt="Переход на главную"
+                        <a href="index.html" class="logo_mini" title="домашняя страница сайт а вимтех"><img src="img/micro_logo.png" alt="Переход на главную"
                                                                     title="Переход на главную"></a>
-                        <a href="index.html" class="logo_big">
+                        <a href="index.html" class="logo_big" >
 
                             <i>В</i>ИМТЕХ
                         </a>
                         <p><b>пр.</b> <i>Ш</i>олохова, <b>д.</b>101</p>
                     </div>
                     <p class="header_nav_logo_line_sity">Сплит системы в Ростове-на-Дону</p>
-                    <a href="javascript:void(0)" class="header_nav_logo_line_schem"
+                    <a href="javascript:void(0)" class="header_nav_logo_line_schem" title="Удобный маршрут в магазин сплит систем"
                        id="schem_header">(<span>схема проезда</span>)</a>
                 </div>
                 <div class="header_nav_katalog_line">
@@ -3524,9 +3524,9 @@
                         <a href="javascript:void(0)" class="all_mini"
                            title="Каталог (более 3650 шт.) сплит в Ростове. Технические характеристики удобный подбор товаров на сайте">каталог</a>
                         <div class="header_nav_katalog_categories">
-                            <a href="javascript:void(0)" class="button" id="brend_button">по БРЕНДАМ<i></i></a>
-                            <a href="javascript:void(0)" class="button" id="area_button">по ПЛОЩАДИ<i></i></a>
-                            <a href="javascript:void(0)" class="button" id="price_button">по ОЦЕНКЕ<i></i></a>
+                            <a href="javascript:void(0)" class="button" id="brend_button" title="Кондиционеры рассортированные по брендам">по БРЕНДАМ<i></i></a>
+                            <a href="javascript:void(0)" class="button" id="area_button" title="Сплит - системы подобранные по мощности">по ПЛОЩАДИ<i></i></a>
+                            <a href="javascript:void(0)" class="button" id="price_button" title="Сплит рассортированные по категориям популярности">по ОЦЕНКЕ<i></i></a>
                         </div>
 
                     </div>
@@ -3535,11 +3535,11 @@
             <div class="header__user_info">
                 <div class="header__user_info_product_line">
                     <div class="compare">
-                        <a href="javascript:void(0)"><i class="icon-compare"></i> В сравнении</a> <span>(4)</span>
+                        <a href="javascript:void(0)"><i class="icon-compare" title="Список товаров для сравнения"></i> В сравнении</a> <span>(4)</span>
                     </div>
                     <div class="basket">
                         <i></i>
-                        <a href="javascript:void(0)">118 540</a>
+                        <a href="javascript:void(0)" title="Перейти к заказам">118 540</a>
                         <span>руб</span>
                     </div>
                 </div>
@@ -3560,24 +3560,26 @@
                         <div class="time_text">
                             <p>Пн-Пт <i>с</i> 10 <i>до</i> 19</p>
                             <p><span>Сб-Вс</span> <i>с</i> 10 <i>до</i> 14</p>
-                            <h4 id="schem_time">(без перерыва)</h4>
+                            <h4 id="schem_time" title="Режим работы ООО ВИМТЕХ">(без перерыва)</h4>
                         </div>
                     </div>
                     <div class="header__user_info_info_serch">
-                        <p class="header__user_info_info_serch_input">
+                        <p class="header__user_info_info_serch_input" title="писк информации на сайте магазина кондиционеров">
                             поис<span>к</span>
                         </p>
                         <i class="header__user_info_info_serch_lupa"></i>
-                        <a href="javascript:void(0)" class="header__user_info_info_check" id="enter">Регистрация</a>
+                        <a href="javascript:void(0)" class="header__user_info_info_check" id="enter" title="Личный кабинет покупателя">Регистрация</a>
                     </div>
                     <div class="header__user_info_info_select_line">
                         <a href="javascript:void(0)" class="header__user_info_info_select_line_select"
+                           title="Мобильные и полупромышленные"
                            id="multi_button">
                             <p>Мультисплит<br>
                                 и полупром</p>
                             <i></i>
                         </a>
                         <a href="javascript:void(0)" class="header__user_info_info_select_line_select"
+                           title="Услуги оказываемые населению Ростова ООО ВИМТЕХ"
                            id="service_button">
 
                             <p>
@@ -3587,6 +3589,7 @@
                             <i></i>
                         </a>
                         <a href="javascript:void(0)" class="header__user_info_info_select_line_select"
+                           title="Рекомендации по правильному подбору кондиционера"
                            id="question_button">
                             <p>
                                 Помощь в<br>
@@ -3606,7 +3609,7 @@
                 </ul>
                 <div class="header_kontakt_line">
                     <a href="mailto:zakaz@2211687.ru Менеджеру_ВИМТЕХ?subject=рассмотреть срочно(шифр ОВ-особой важности)"
-                       class="meil"><p>Пишите:</p><i
+                       class="meil" title="написать письма в офис вимтех"><p>Пишите:</p><i
                             class="icon-mail_header"></i> <span>zakaz@2211687.ru</span></a>
                     <div class="ring_wrap">
                         <a href="javascript:void(0)" class="ring">
@@ -3634,7 +3637,7 @@
                                     69 06</p>
                                 <p itemprop="telephone"><i class="tel4"></i><span>+7 (904)</span> 348
                                     59 21</p>
-                                <p><span>Skype:</span> <a href="skype:bogdan5749">bogdan5749</a></p></div>
+                                <p><span>Skype:</span> <a href="skype:bogdan5749" title="Пообщаться с руководителем производственного отдела">bogdan5749</a></p></div>
                         </div>
                     </div>
                 </div>
@@ -3652,7 +3655,7 @@
             <div class="content">
                 <div class="section_crumbs_rez">
                     <span></span>
-                    <a href="#">Результаты фильтрации</a>
+                    <a href="#" title="Вернуться к отсортированным кондиционерам">Результаты фильтрации</a>
                     <i></i>
                 </div>
                 <ul>
@@ -5758,7 +5761,7 @@
                 Полный прайс лист на работы и материалы<span><b>В</b>ИМТЕХ</span>
             </a>
             <div class="mini_footer_services">
-                <h3 class="mini_footer_services_zag">Услуги</h3>
+                <h4 class="mini_footer_services_zag">Услуги</h4>
                 <div class="mini_footer_services_install">
                     <a href="#">
                         <p>Установка</p>
