Исправлена анимация появлления информации на карточке товаров

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/jquery.mCustomScrollbar.css">
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/TimeCircles.css">
+    <link rel="stylesheet" href="css/animate.css">
 
 
 </head>
@@ -1851,7 +1852,7 @@
                 <a href="javascript:void(0)" class="close close enter_close"><i></i></a>
                 <!--Вход на сайт -->
                 <div class="enter_block_enter">
-                    <h3 class="enter_block_zag">Вход</h3>
+                    <h4 class="enter_block_zag">Вход</h4>
                     <form method="post" action="javascript:void(0)" class="enter_block_enter_form">
                         <input type="email" placeholder="Введите Ваш E-mail" class="meil" id="enter_mail">
                         <input type="password" placeholder="Пароль" class="password" id="enter_password">
@@ -1874,7 +1875,7 @@
                 </div>
                 <!--/Вход на сайт -->
                 <div class="enter_block_reg">
-                    <h3 class="enter_block_zag">Регистрация</h3>
+                    <h4 class="enter_block_zag">Регистрация</h4>
                     <form method="post" action="javascript:void(0)" class="enter_block_reg_form">
                         <!--Данные пользователя -->
                         <div class="enter_block_reg_form_info">
@@ -1886,7 +1887,7 @@
                         <!--/Данные пользователя -->
                         <!--Ввод пароля-->
                         <div class="enter_block_reg_form_password">
-                            <h3 class="enter_block_reg_form_password_zag">Придумайте и напишите свой пароль:</h3>
+                            <h4 class="enter_block_reg_form_password_zag">Придумайте и напишите свой пароль:</h4>
                             <input type="password" placeholder="Повторите пароль" id="reg_password2">
                             <input type="password" placeholder="Пароль" id="reg_password">
                         </div>
@@ -2841,7 +2842,7 @@
                                 <a href="javascript:void(0)" id="cline_power"><span>очистить формы</span></a>
                                 <div class="selected_block">
                                     <p>Подобрано</p>
-                                    <a href="javascript:void(0)">47 товаров</a>
+                                    <p><span>_ _</span> товаров</p>
                                 </div>
                             </div>
                         </div>
@@ -3659,31 +3660,31 @@
                     <i></i>
                 </div>
                 <ul>
-                    <li><a href="#">Главная</a></li>
+                    <li><a href="#" title="Сплит-системы в Ростове">Главная</a></li>
                     <li class="arow"><span></span></li>
-                    <li class="select"><a href="#">Сплит системы (каталог)</a>
+                    <li class="select"><a href="#" title="Каталог техники в продаже">Сплит системы (каталог)</a>
                         <ul class="select_pod_menu">
-                            <li><a href="#">Цены</a></li>
+                            <li><a href="#" title="Цены на сплит в Ростове">Цены</a></li>
 
                         </ul>
                     </li>
                     <li class="arow"><span></span></li>
-                    <li class="select"><a href="#"> Panasonic</a>
+                    <li class="select"><a href="#" title="Цены на Panasonic в Ростове"> Panasonic</a>
                         <ul class="select_pod_menu">
-                            <li><a href="#">Aero</a></li>
-                            <li><a href="#">Ballu</a></li>
-                            <li><a href="#">Fujitsu</a></li>
-                            <li><a href="#">Lessar</a></li>
-                            <li><a href="#">Mitsubishi</a></li>
-                            <li><a href="#">Toshiba</a></li>
-                            <li><a href="#">Tosot</a></li>
+                            <li><a href="#"title="Цены на Aero в Ростове">Aero</a></li>
+                            <li><a href="#" title="Цены на Ballu в Ростове">Ballu</a></li>
+                            <li><a href="#" title="Цены на Fujitsu в Ростове">Fujitsu</a></li>
+                            <li><a href="#" title="Цены на Lessar в Ростове">Lessar</a></li>
+                            <li><a href="#" title="Цены на Mitsubishi в Ростове">Mitsubishi</a></li>
+                            <li><a href="#" title="Цены на Toshiba в Ростове">Toshiba</a></li>
+                            <li><a href="#" title="Цены на Tosot в Ростове">Tosot</a></li>
                         </ul>
                     </li>
                     <li class="arow"><span></span></li>
-                    <li class="select"><a href="#"> Настенные</a>
+                    <li class="select"><a href="#" title="Цены на настенные кондиционеры в Ростове"> Настенные</a>
                         <ul class="select_pod_menu">
-                            <li><a href="#">Потолочные</a></li>
-                            <li><a href="#">Кассетные</a></li>
+                            <li><a href="#" title="Цены на потолочные кондиционеры в Ростове">Потолочные</a></li>
+                            <li><a href="#" title="Цены на кассетные кондиционеры в Ростове">Кассетные</a></li>
                         </ul>
                     </li>
                     <li class="arow"><span></span></li>
@@ -4095,12 +4096,12 @@
                                 акции
                             </h4>
                             <ul>
-                                <li><a href="javascript:void(0)">Лучшая цена в Ростове</a></li>
-                                <li><a href="javascript:void(0)">Купи 2 сплита – оптовая цена</a></li>
-                                <li><a href="javascript:void(0)">Вернём бонусы на карту</a></li>
-                                <li><a href="javascript:void(0)">Установка за <sup>1</sup>/<sub>2</sub> цены
+                                <li><a href="javascript:void(0)" title="Условия проведения акции  лучшая цена сплит в Ростове">Лучшая цена в Ростове</a></li>
+                                <li><a href="javascript:void(0)" title="Условия проведения акции  при покупке 2-х кондиционеров">Купи 2 сплита – оптовая цена</a></li>
+                                <li><a href="javascript:void(0)" title="Бонусная программа для постоянных покупателей">Вернём бонусы на карту</a></li>
+                                <li><a href="javascript:void(0)" title="Скидки на установку сплит в Ростове">Установка за <sup>1</sup>/<sub>2</sub> цены
                                     монтажа</a></li>
-                                <li><a href="javascript:void(0)">Особые цены – «Только для
+                                <li><a href="javascript:void(0)" title="Скидки для повторно обратившихся покупателей">Особые цены – «Только для
                                     своих»</a></li>
                             </ul>
                         </div>
@@ -5003,15 +5004,15 @@
                     <div class="section__recommended_header">
                         <div class="section__recommended_header_zag">
                             <h4><i></i>Рекомендуем к ознакомлению<span>(очень популярны)</span></h4>
-                            <a href="javascript:void(0)" class="mail">
+                            <a href="javascript:void(0)" class="mail" title="Получить на почту список товаров, которые мы рекомендуем, кондиционеры которые Вы просматривали на сайте ВИМТЕХ,  отложенные для сравнения">
                                 <span>Отправить список на мой E-mail</span>
                             </a>
 
                         </div>
                         <div class="section__recommended_header_info">
-                            <a href="javascript:void(0)"><i class="simile"></i>Показать товары в
+                            <a href="javascript:void(0)"><i class="simile" title="Товары для сравнения дизайна, цен, характеристик"></i>Показать товары в
                                 сравнении<span>(9)</span></a>
-                            <a href="javascript:void(0)"><i class="see"></i>Недавно просмотренные<span>(11)</span></a>
+                            <a href="javascript:void(0)" title="Кондиционеры, которые Вы просматривали, на сайте сплит системы в Ростове"><i class="see"></i>Недавно просмотренные<span>(11)</span></a>
                         </div>
                     </div>
                 </div>
@@ -5063,7 +5064,7 @@
                                         </div>
                                     </div>
                                     <!-- ******************************Подрбная информация************************************************* -->
-                                    <div class="product__all_info">
+                                    <div class="product__all_info animated">
                                         <div class="product__all_info_header">
                                             <span class="product__all_info_header_best_icon"></span>
                                             <div class="product__all_info_header_logo">
@@ -5197,7 +5198,7 @@
                                         </div>
                                     </div>
                                     <!-- ******************************Подрбная информация************************************************* -->
-                                    <div class="product__all_info">
+                                    <div class="product__all_info animated">
                                         <div class="product__all_info_header">
                                             <span class="product__all_info_header_best_icon"></span>
                                             <div class="product__all_info_header_logo">
@@ -5331,7 +5332,7 @@
                                         </div>
                                     </div>
                                     <!-- ******************************Подрбная информация************************************************* -->
-                                    <div class="product__all_info">
+                                    <div class="product__all_info animated">
                                         <div class="product__all_info_header">
                                             <span class="product__all_info_header_best_icon"></span>
                                             <div class="product__all_info_header_logo">
@@ -5466,7 +5467,7 @@
                                         </div>
                                     </div>
                                     <!-- ******************************Подрбная информация************************************************* -->
-                                    <div class="product__all_info">
+                                    <div class="product__all_info animated">
                                         <div class="product__all_info_header">
                                             <span class="product__all_info_header_best_icon"></span>
                                             <div class="product__all_info_header_logo">
@@ -5831,8 +5832,8 @@
                         <meta itemprop="priceRange" content="RUB">
                         <div class="footer_info_header_logo_block_logo">
 
-                            <a href="index.html">
-                                <strong itemprop="name">ООО “<span>В</span>имтех”</strong></a>
+                            <p class="logo">
+                                <strong itemprop="name">ООО “<span>В</span>имтех”</strong></p>
                             <p itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
                                 <strong itemprop="postalCode">344029</strong>, г.
                                 <strong itemprop="addressLocality">Ростов-на-Дону, пр. Шолохова, д. 101</strong></p>
@@ -5978,7 +5979,7 @@
         </div>
     </footer>
 </div>
-<script src="js/jquery-3.2.1.min.js"></script>
+<script src="js/jquery-2.2.3.min.js"></script>
 <script src="js/jquery.mCustomScrollbar.min.js"></script>
 <script src="js/may_script.js"></script>
 <script src="js/slick.min.js"></script>
