Переведёно на спрайт все подменю, остались фоновые изображения блоков

--- a/index.html
+++ b/index.html
@@ -2944,24 +2944,26 @@
                                 <a href="javascript:void(0)"></a>
                             </div>
                             <div class="brend_block_box_logo_block">
-                                <a href="javascript:void(0)"><img src="img/good1.png"
-                                                                  alt="Ассортимент, цены кондиционеров (сплит) производителя Tosot"
-                                                                  title="Ассортимент, цены кондиционеров (сплит) производителя Tosot"></a>
-                                <a href="javascript:void(0)"><img src="img/good2.png"
-                                                                  alt="Ассортимент, цены кондиционеров (сплит) производителя Panasonic"
-                                                                  title="Ассортимент, цены кондиционеров (сплит) производителя Panasonic"></a>
-                                <a href="javascript:void(0)"><img src="img/good3.png"
-                                                                  alt="Ассортимент, цены кондиционеров (сплит) производителя Toshiba"
-                                                                  title="Ассортимент, цены кондиционеров (сплит) производителя Toshiba"></a>
-                                <a href="javascript:void(0)"><img src="img/good4.png"
-                                                                  alt="Ассортимент, цены кондиционеров (сплит) производителя MDV"
-                                                                  title="Ассортимент, цены кондиционеров (сплит) производителя MDV"></a>
-                                <a href="javascript:void(0)"><img src="img/good5.png"
-                                                                  alt="Ассортимент, цены кондиционеров (сплит) производителя Lessar"
-                                                                  title="Ассортимент, цены кондиционеров (сплит) производителя Lessar"></a>
-                                <a href="javascript:void(0)"><img src="img/good6.png"
-                                                                  alt="Ассортимент, цены кондиционеров (сплит) производителя Ballu"
-                                                                  title="Ассортимент, цены кондиционеров (сплит) производителя Ballu"></a>
+                                <div class="logo_line">
+                                    <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя Tosot" class="bg-good1"></a>
+                                </div>
+                                <div class="logo_line">
+                                    <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя Panasonic" class="bg-good2"></a>
+                                </div>
+                                <div class="logo_line">
+                                    <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя Toshiba" class="bg-good3"></a>
+                                </div>
+                                <div class="logo_line">
+                                    <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя MDV" class="bg-good4"></a>
+                                </div>
+                                <div class="logo_line">
+                                    <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя Lessar" class="bg-good5"></a>
+                                </div>
+                                <div class="logo_line">
+                                    <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя Ballu" class="bg-good6"></a>
+                                </div>
+
+
                             </div>
                         </div>
                     </div>
@@ -2977,19 +2979,18 @@
                                 <a href="javascript:void(0)"></a>
                             </div>
                             <div class="brend_block_box_logo_block">
-                                <a href="javascript:void(0)"><img src="img/cheap1.png"
-                                                                  alt="Ассортимент, цены кондиционеров (сплит) производителя Aero"
-                                                                  title="Ассортимент, цены кондиционеров (сплит) производителя Aero"></a>
-                                <a href="javascript:void(0)"><img src="img/cheap2.png"
-                                                                  alt="Ассортимент, цены кондиционеров (сплит) производителя vertex"
-                                                                  title="Ассортимент, цены кондиционеров (сплит) производителя vertex"></a>
-                                <a href="javascript:void(0)"><img src="img/cheap3.png"
-                                                                  alt="Ассортимент, цены кондиционеров (сплит) производителя qatro"
-                                                                  title="Ассортимент, цены кондиционеров (сплит) производителя qatro"></a>
-                                <a href="javascript:void(0)"><img src="img/cheap4.png"
-                                                                  alt="Ассортимент, цены кондиционеров (сплит) производителя green"
-                                                                  title="Ассортимент, цены кондиционеров (сплит) производителя green"></a>
-
+                                <div class="logo_line">
+                                    <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя Aero" class="bg-cheap1"></a>
+                                </div>
+                                <div class="logo_line">
+                                    <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя vertex" class="bg-cheap2"></a>
+                                </div>
+                                <div class="logo_line">
+                                    <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя qatro" class="bg-cheap3"></a>
+                                </div>
+                                <div class="logo_line">
+                                    <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя green" class="bg-cheap4"></a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -3005,18 +3006,22 @@
                                 <a href="javascript:void(0)" class="star_action"></a>
                             </div>
                             <div class="brend_block_box_logo_block">
-                                <a href="javascript:void(0)"><img src="img/prestig1.png"
-                                                                  alt="Ассортимент, цены кондиционеров (сплит) производителя mitsubishi"
-                                                                  title="Ассортимент, цены кондиционеров (сплит) производителя mitsubishi"></a>
-                                <a href="javascript:void(0)"><img src="img/prestig2.png"
-                                                                  alt="Ассортимент, цены кондиционеров (сплит) производителя fujitsu "
-                                                                  title="Ассортимент, цены кондиционеров (сплит) производителя fujitsu"></a>
-                                <a href="javascript:void(0)"><img src="img/prestig3.png"
-                                                                  alt="Ассортимент, цены кондиционеров (сплит) производителя darkin"
-                                                                  title="Ассортимент, цены кондиционеров (сплит) производителя darkin"></a>
-                                <a href="javascript:void(0)" class="big"><img src="img/prestig4.png"
-                                                                              alt="Ассортимент, цены кондиционеров (сплит) производителя mitsubishi"
-                                                                              title="Ассортимент, цены кондиционеров (сплит) производителя mitsubishi"></a>
+                                <div class="logo_line">
+                                    <a href="javascript:void(0)" class="bg-prestig1" title="Ассортимент, цены кондиционеров (сплит) производителя mitsubishi"></a>
+                                </div>
+                                <div class="logo_line">
+                                    <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя fujitsu" class="bg-prestig2"></a>
+                                </div>
+                                <div class="logo_line">
+                                    <a href="javascript:void(0)"  title="Ассортимент, цены кондиционеров (сплит) производителя darkin" class="bg-prestig3"></a>
+                                </div>
+                                <div class="logo_line big">
+                                    <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя mitsubishi" class="bg-prestig4"></a>
+                                </div>
+
+
+
+
 
                             </div>
                         </div>
@@ -3030,8 +3035,7 @@
                             <p>“Лучшее соотношение цена/качество 2017”</p>
                             <a href="javascript:void(0)">cплит системы TOSOT</a>
                         </div>
-                        <a href="javascript:void(0)" class="brend_block_footer_winner_logo"><img src="img/slogan.jpg"
-                                                                                                 alt="" title=""></a>
+                        <a href="javascript:void(0)" class="brend_block_footer_winner_logo"><</a>
                     </div>
                     <a href="javascript:void(0)" class="brend_block_footer_brend_all"
                        title="Каталог (более 3650 шт.) сплит в Ростове. Технические характеристики удобный подбор товаров на сайте">
@@ -3256,15 +3260,16 @@
                 <div class="price_block_img_line">
                     <div class="price_block_img_tabl">
                         <div class="price_block_img_block">
-                            <img src="img/img0.jpg" alt="" title="" class="action">
-                            <img src="img/img1.jpg" alt="" title="" id="img1">
-                            <img src="img/img2.jpg" alt="" title="" id="img2">
-                            <img src="img/img3.jpg" alt="" title="" id="img3">
-                            <img src="img/img4.jpg" alt="" title="" id="img4">
-                            <img src="img/img5.jpg" alt="" title="" id="img5">
-                            <img src="img/img6.jpg" alt="" title="" id="img6">
-                            <img src="img/img7.jpg" alt="" title="" id="img7">
-                            <img src="img/img8.jpg" alt="" title="" id="img8">
+                            <div class="img action bg-img0"></div>
+                            <div id="img1" class="img bg-img1"></div>
+                            <div id="img2" class="img bg-img2"></div>
+                            <div id="img3" class="img bg-img3"></div>
+                            <div id="img4" class="img bg-img4"></div>
+                            <div id="img5" class="img bg-img5"></div>
+                            <div id="img6" class="img bg-img6"></div>
+                            <div id="img7" class="img bg-img7"></div>
+                            <div id="img8" class="img bg-img8"></div>
+
                         </div>
 
                     </div>
@@ -3380,13 +3385,12 @@
                 </div>
                 <div class="services_block_img_table">
                     <div class="services_block_img_wrap">
-                        <img src="img/vimtex.png" alt="" title="" class="action">
-                        <img src="img/image1.jpg" alt="" title="" id="image1">
-                        <img src="img/image2.jpg" alt="" title="" id="image2">
-                        <img src="img/image3.jpg" alt="" title="" id="image3">
-                        <img src="img/image4.jpg" alt="" title="" id="image4">
-                        <img src="img/image5.jpg" alt="" title="" id="image5">
-
+                        <div class="img bg-vimtex action"></div>
+                        <div class="img bg-image1" id="image1"></div>
+                        <div class="img bg-image2" id="image2"></div>
+                        <div class="img bg-image3" id="image3"></div>
+                        <div class="img bg-image4" id="image4"></div>
+                        <div class="img bg-image5" id="image5"></div>
                     </div>
                 </div>
                 <div class="services_block_nav">
