Шапка полностью переведена на спрайты

--- a/index.html
+++ b/index.html
@@ -3312,7 +3312,7 @@
                             60</a>
                     </div>
                     <div class="multi_block_kaseta_washing" title="Приборы для очистки и увлажнения воздуха">
-                        <img src="img/washing.png" alt="">
+                        <div class="icon-washing"></div>
                         <a href="javascript:void(0)">
                             <span>Мобильные кондиционеры,</span>
                             <span>Мойки воздуха,</span>
@@ -3350,7 +3350,7 @@
 
                     </div>
                     <div class="multi_block_multi_kalcul" title="Калькулятор мультисплит">
-                        <img src="img/kalcul2.png" alt="" title="">
+                        <div class="icon-kalcul2"></div>
                         <a href="javascript:void(0)">
                             <span>On-Line программа</span>
                             <span>расчёта стоимости</span>
