--- a/index.html
+++ b/index.html
@@ -332,7 +332,8 @@
                             <div class="individuals_block_slide_header_men">
                                 <!-- аватар пользователя  -->
                                 <div class="individuals_block_slide_header_men_foto">
-                                    <img itemprop="image" src="img/man1.jpg" alt="Ишколов Расим" title="Ишколов Расим"/>
+                                    <div class="bg-w_man1" title="Ишколов Расим"></div>
+
                                 </div>
                                 <!-- /аватар пользователя  -->
                                 <div class="individuals_block_slide_header_men_info_block">
@@ -371,8 +372,7 @@
                                 <!-- Банер 200руб за отзыв  -->
                                 <div class="individuals_block_slide_header_yandex_block_baner_yandex baner_tel">
                                     <a href="javascript:void(0)" class="yandex_help"></a>
-                                    <img src="img/yandex_baner.jpg" alt="Поллучить 200руб. за отыв"
-                                         title="Получить 200руб. за отзыв"/>
+                                    <div class="bg-yandex_baner" title="Получить 200руб. за отзыв"></div>
                                 </div>
                                 <!-- /Банер 200руб за отзыв  -->
                             </div>
@@ -425,8 +425,7 @@
                             <!-- Ответ -->
                             <div class="individuals_block_slide_content_quality">
                                 <div class="individuals_block_slide_content_quality_zag">
-                                    <h4><a href="index.html"><img src="img/logo_comment.jpg" alt="На главнную"
-                                                                  title="на главную"/></a> Ответ отдела “Контроль
+                                    <h4><a href="index.html" class="bg-logo_comment"></a> Ответ отдела “Контроль
                                         качества
                                         работы”</h4>
                                 </div>
@@ -470,8 +469,8 @@
                             <div class="individuals_block_slide_header_men">
                                 <!-- аватар пользователя  -->
                                 <div class="individuals_block_slide_header_men_foto">
-                                    <img itemprop="image" src="img/man2.jpg" alt="Дохленко Ольга"
-                                         title="Дохленко Ольга"/>
+                                    <div class="bg-w_man2" title="Дохленко Ольга"></div>
+
                                 </div>
                                 <!-- /аватар пользователя  -->
                                 <div class="individuals_block_slide_header_men_info_block">
@@ -510,8 +509,7 @@
                                 <!-- Банер 200руб за отзыв  -->
                                 <div class="individuals_block_slide_header_yandex_block_baner_yandex baner_tel">
                                     <a href="javascript:void(0)" class="yandex_help"></a>
-                                    <img src="img/yandex_baner.jpg" alt="Поллучить 200руб. за отыв"
-                                         title="Получить 200руб. за отзыв"/>
+                                    <div class="bg-yandex_baner" title="Получить 200руб. за отзыв"></div>
                                 </div>
                                 <!-- /Банер 200руб за отзыв  -->
                             </div>
@@ -572,8 +570,7 @@
                             <!-- Ответ -->
                             <div class="individuals_block_slide_content_quality">
                                 <div class="individuals_block_slide_content_quality_zag">
-                                    <h4><a href="index.html"><img src="img/logo_comment.jpg" alt="На главнную"
-                                                                  title="на главную"/></a> Ответ отдела “Контроль
+                                    <h4><a href="index.html" class="bg-logo_comment"></a> Ответ отдела “Контроль
                                         качества
                                         работы”</h4>
                                 </div>
@@ -622,8 +619,8 @@
                             <div class="individuals_block_slide_header_men">
                                 <!-- аватар пользователя  -->
                                 <div class="individuals_block_slide_header_men_foto">
-                                    <img itemprop="image" src="img/man3.jpg" alt="Кочерян Денис" title="Кочерян Денис"/>
-                                </div>
+                                    <div class="bg-w_man3" title="Кочерян Денис"></div>
+                                  </div>
                                 <!-- /аватар пользователя  -->
                                 <div class="individuals_block_slide_header_men_info_block">
                                     <!-- Имя пользователя  -->
@@ -660,9 +657,8 @@
                                 <!-- /рейтинг с яндекс маркета  -->
                                 <!-- Банер 200руб за отзыв  -->
                                 <div class="individuals_block_slide_header_yandex_block_baner_yandex baner_tel">
-                                    <a href="javascript:void(0)" id="yandex_help"></a>
-                                    <img src="img/yandex_baner.jpg" alt="Поллучить 200руб. за отыв"
-                                         title="Получить 200руб. за отзыв"/>
+                                    <a href="javascript:void(0)" class="yandex_help"></a>
+                                    <div class="bg-yandex_baner" title="Получить 200руб. за отзыв"></div>
                                 </div>
                                 <!-- /Банер 200руб за отзыв  -->
                             </div>
@@ -728,8 +724,7 @@
                             <!-- Ответ -->
                             <div class="individuals_block_slide_content_quality">
                                 <div class="individuals_block_slide_content_quality_zag">
-                                    <h4><a href="index.html"><img src="img/logo_comment.jpg" alt="На главнную"
-                                                                  title="на главную"/></a> Ответ отдела “Контроль
+                                    <h4><a href="index.html" class="bg-logo_comment"></a> Ответ отдела “Контроль
                                         качества
                                         работы”</h4>
                                 </div>
@@ -775,7 +770,8 @@
                             <div class="individuals_block_slide_header_men">
                                 <!-- аватар пользователя  -->
                                 <div class="individuals_block_slide_header_men_foto">
-                                    <img itemprop="image" src="img/man4.jpg" alt="Иванов Андрей" title="Иванов Андрей"/>
+                                    <div class="bg-w_man4" title="Иванов Андрей"></div>
+
                                 </div>
                                 <!-- /аватар пользователя  -->
                                 <div class="individuals_block_slide_header_men_info_block">
@@ -813,9 +809,8 @@
                                 <!-- /рейтинг с яндекс маркета  -->
                                 <!-- Банер 200руб за отзыв  -->
                                 <div class="individuals_block_slide_header_yandex_block_baner_yandex baner_tel">
-                                    <a href="javascript:void(0)" id="yandex_help"></a>
-                                    <img src="img/yandex_baner.jpg" alt="Поллучить 200руб. за отыв"
-                                         title="Получить 200руб. за отзыв"/>
+                                    <a href="javascript:void(0)" class="yandex_help"></a>
+                                    <div class="bg-yandex_baner" title="Получить 200руб. за отзыв"></div>
                                 </div>
                                 <!-- /Банер 200руб за отзыв  -->
                             </div>
@@ -924,8 +919,7 @@
                             <!-- Ответ -->
                             <div class="individuals_block_slide_content_quality">
                                 <div class="individuals_block_slide_content_quality_zag">
-                                    <h4><a href="index.html"><img src="img/logo_comment.jpg" alt="На главнную"
-                                                                  title="на главную"/></a> Ответ отдела “Контроль
+                                    <h4><a href="index.html" class="bg-logo_comment"></a> Ответ отдела “Контроль
                                         качества
                                         работы”</h4>
                                 </div>
@@ -979,8 +973,8 @@
                             <div class="individuals_block_slide_header_men">
                                 <!-- аватар пользователя  -->
                                 <div class="individuals_block_slide_header_men_foto">
-                                    <img itemprop="image" src="img/man5.jpg" alt="Василенко Сергей"
-                                         title="Василенко Сергей"/>
+                                    <div class="bg-w_man5" title="Василенко Сергей"></div>
+
                                 </div>
                                 <!-- /аватар пользователя  -->
                                 <div class="individuals_block_slide_header_men_info_block">
@@ -1018,9 +1012,8 @@
                                 <!-- /рейтинг с яндекс маркета  -->
                                 <!-- Банер 200руб за отзыв  -->
                                 <div class="individuals_block_slide_header_yandex_block_baner_yandex baner_tel">
-                                    <a href="javascript:void(0)" id="yandex_help"></a>
-                                    <img src="img/yandex_baner.jpg" alt="Поллучить 200руб. за отыв"
-                                         title="Получить 200руб. за отзыв"/>
+                                    <a href="javascript:void(0)" class="yandex_help"></a>
+                                    <div class="bg-yandex_baner" title="Получить 200руб. за отзыв"></div>
                                 </div>
                                 <!-- /Банер 200руб за отзыв  -->
                             </div>
@@ -1088,8 +1081,7 @@
                             <!-- Ответ -->
                             <div class="individuals_block_slide_content_quality">
                                 <div class="individuals_block_slide_content_quality_zag">
-                                    <h4><a href="index.html"><img src="img/logo_comment.jpg" alt="На главнную"
-                                                                  title="на главную"/></a> Ответ отдела “Контроль
+                                    <h4><a href="index.html" class="bg-logo_comment"></a> Ответ отдела “Контроль
                                         качества
                                         работы”</h4>
                                 </div>
@@ -1134,8 +1126,8 @@
                             <div class="individuals_block_slide_header_men">
                                 <!-- аватар пользователя  -->
                                 <div class="individuals_block_slide_header_men_foto">
-                                    <img itemprop="image" src="img/man6.jpg" alt="Васильев Вадим"
-                                         title="Васильев Вадим"/>
+                                    <div class="bg-w_man6" title="Васильев Вадим"></div>
+
                                 </div>
                                 <!-- /аватар пользователя  -->
                                 <div class="individuals_block_slide_header_men_info_block">
@@ -1173,9 +1165,8 @@
                                 <!-- /рейтинг с яндекс маркета  -->
                                 <!-- Банер 200руб за отзыв  -->
                                 <div class="individuals_block_slide_header_yandex_block_baner_yandex baner_tel">
-                                    <a href="javascript:void(0)" id="yandex_help"></a>
-                                    <img src="img/yandex_baner.jpg" alt="Поллучить 200руб. за отыв"
-                                         title="Получить 200руб. за отзыв"/>
+                                    <a href="javascript:void(0)" class="yandex_help"></a>
+                                    <div class="bg-yandex_baner" title="Получить 200руб. за отзыв"></div>
                                 </div>
                                 <!-- /Банер 200руб за отзыв  -->
                             </div>
@@ -1245,8 +1236,7 @@
                             <!-- Ответ -->
                             <div class="individuals_block_slide_content_quality">
                                 <div class="individuals_block_slide_content_quality_zag">
-                                    <h4><a href="index.html"><img src="img/logo_comment.jpg" alt="На главнную"
-                                                                  title="на главную"/></a> Ответ отдела “Контроль
+                                    <h4><a href="index.html" class="bg-logo_comment"></a> Ответ отдела “Контроль
                                         качества
                                         работы”</h4>
                                 </div>
@@ -1304,8 +1294,8 @@
                             <div class="individuals_block_slide_header_men">
                                 <!-- аватар пользователя  -->
                                 <div class="individuals_block_slide_header_men_foto">
-                                    <img itemprop="image" src="img/man7.jpg" alt="Литвин Владимир"
-                                         title="Литвин Владимир"/>
+                                    <div class="bg-w_man7" title="Литвин Владимир"></div>
+
                                 </div>
                                 <!-- /аватар пользователя  -->
                                 <div class="individuals_block_slide_header_men_info_block">
@@ -1343,9 +1333,8 @@
                                 <!-- /рейтинг с яндекс маркета  -->
                                 <!-- Банер 200руб за отзыв  -->
                                 <div class="individuals_block_slide_header_yandex_block_baner_yandex baner_tel">
-                                    <a href="javascript:void(0)" id="yandex_help"></a>
-                                    <img src="img/yandex_baner.jpg" alt="Поллучить 200руб. за отыв"
-                                         title="Получить 200руб. за отзыв"/>
+                                    <a href="javascript:void(0)"class="yandex_help"></a>
+                                    <div class="bg-yandex_baner" title="Получить 200руб. за отзыв"></div>
                                 </div>
                                 <!-- /Банер 200руб за отзыв  -->
                             </div>
@@ -1402,8 +1391,7 @@
                             <!-- Ответ -->
                             <div class="individuals_block_slide_content_quality">
                                 <div class="individuals_block_slide_content_quality_zag">
-                                    <h4><a href="index.html"><img src="img/logo_comment.jpg" alt="На главнную"
-                                                                  title="на главную"/></a> Ответ отдела “Контроль
+                                    <h4><a href="index.html" class="bg-logo_comment"></a> Ответ отдела “Контроль
                                         качества
                                         работы”</h4>
                                 </div>
@@ -1446,8 +1434,8 @@
                             <div class="individuals_block_slide_header_men">
                                 <!-- аватар пользователя  -->
                                 <div class="individuals_block_slide_header_men_foto">
-                                    <img itemprop="image" src="img/man8.jpg" alt="Елена Лихачева"
-                                         title="Елена Лихачева"/>
+                                    <div class="bg-w_man8" title="Елена Лихачева"></div>
+
                                 </div>
                                 <!-- /аватар пользователя  -->
                                 <div class="individuals_block_slide_header_men_info_block">
@@ -1485,9 +1473,8 @@
                                 <!-- /рейтинг с яндекс маркета  -->
                                 <!-- Банер 200руб за отзыв  -->
                                 <div class="individuals_block_slide_header_yandex_block_baner_yandex baner_tel">
-                                    <a href="javascript:void(0)" id="yandex_help"></a>
-                                    <img src="img/yandex_baner.jpg" alt="Поллучить 200руб. за отыв"
-                                         title="Получить 200руб. за отзыв"/>
+                                    <a href="javascript:void(0)" class="yandex_help"></a>
+                                    <div class="bg-yandex_baner" title="Получить 200руб. за отзыв"></div>
                                 </div>
                                 <!-- /Банер 200руб за отзыв  -->
                             </div>
@@ -1557,8 +1544,7 @@
                             <!-- Ответ -->
                             <div class="individuals_block_slide_content_quality">
                                 <div class="individuals_block_slide_content_quality_zag">
-                                    <h4><a href="index.html"><img src="img/logo_comment.jpg" alt="На главнную"
-                                                                  title="на главную"/></a> Ответ отдела “Контроль
+                                    <h4><a href="index.html" class="bg-logo_comment"></a> Ответ отдела “Контроль
                                         качества
                                         работы”</h4>
                                 </div>
